# rust-various

./: .gitignore  CLAUDE.md  Cargo.toml
ai_task/rust_learning/: greeting_cli_task.md  stack_inspector_task.md  wordcount_cli_task.md
ai_task/rust_learning/reference_implementations/: README.md  naked_function_demo.rs  stack_inspector.rs
tests/: wordcount_integration.rs
tests/fixtures/: simple.txt
