[package]
name = "rust-various"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "greeting"
path = "src/bin/greeting.rs"

[[bin]]
name = "wordcount"
path = "src/bin/wordcount.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
either = "1.15.0"
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color-auto"] }
predicates = "3.1.3"
